[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Fabien MARTY <fabien.marty@botify.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.4"
mkdocs-rss-plugin = "^1.12.0"
jinja-tree = { git = "https://github.com/fabien-marty/jinja-tree.git", branch = "main" }
#mkdocs-exclude = "^1.0.2"
#mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-glightbox = "^0.3.7"
mkdocs-awesome-pages-plugin = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
